--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-upload-component": "^2.8.20",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
