--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buffer": "^5.6.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-upload-component": "^2.8.20",
