--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "buffer": "^5.6.0",
     "core-js": "^3.6.5",
+    "file-dialog": "0.0.8",
     "file-saver": "^2.0.2",
     "vue": "^2.6.11",
     "vue-upload-component": "^2.8.20",
