--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "file-dialog": "0.0.8",
     "file-saver": "^2.0.2",
+    "throttle-debounce": "^2.2.1",
     "vue": "^2.6.11",
     "vue-upload-component": "^2.8.20",
     "vuetify": "^2.2.11"
