--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "asn1.js": "^5.3.0",
     "buffer": "^5.6.0",
     "core-js": "^3.6.5",
     "file-dialog": "0.0.8",
