--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "buffer": "^5.6.0",
     "core-js": "^3.6.5",
     "file-dialog": "0.0.8",
     "file-saver": "^2.0.2",
@@ -20,7 +19,9 @@
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.3",
     "@types/node": "^16.3.1",
+    "@types/throttle-debounce": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "@vue/cli-plugin-babel": "~4.5.13",
